--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.12.2",
+    "jspdf": "^4.0.0",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
