--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.10.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "axios": "^1.12.2",
     "jspdf": "^4.0.0",
     "lucide": "^0.544.0",
@@ -17,6 +18,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0"
   },
